# etystsd

./: .gitignore  README.md  preview.html  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_config.cpp  voice_config.cpp
app/src/main/java/com/voice/assistant/: AppPreferences.java  AudioPickerActivity.java  FileBrowserActivity.java  FloatWindowService.java  MainActivity.java  NativeConfig.java  RootChecker.java  RootReplacer.java  UriHelper.java
app/src/main/res/drawable/: bg_badge_gray.xml  bg_badge_green.xml  bg_badge_red.xml  bg_btn_red.xml  bg_card.xml  bg_float_panel.xml  bg_float_window.xml  bg_mode_comment.xml  bg_mode_im.xml  bg_path_field.xml  bg_replace_circle.xml  bg_small_circle_gray.xml  ic_close.xml  ic_launcher_foreground.xml  ic_replace.xml  ic_switch.xml  selector_mode_btn.xml
app/src/main/res/layout/: activity_main.xml  layout_float_window.xml
app/src/main/res/values/: colors.xml  styles.xml
scripts/: gen_keystore.sh
